[package]
name = "structopt-toml"
version = "0.1.1-pre"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/structopt-toml"
keywords = ["cli", "structopt", "clap", "derive"]
categories = ["command-line-interface"]
license = "MIT"
readme = "README.md"
description = "An default value loader from TOML for structopt"

[badges]
travis-ci = { repository = "dalance/structopt-toml" }

[features]
default = ["clap/default", "structopt/default"]

[dependencies]
clap                  = { version = "2.31.1", default-features = false }
toml                  = "0.4.5"
serde                 = "1.0.33"
serde_derive          = "1.0.33"
structopt             = { version = "0.2.5", default-features = false }
structopt-toml-derive = { version = "0.1.0", path = "structopt-toml-derive" }

[package.metadata.release]
dev-version-ext            = "pre"
pre-release-commit-message = "Prepare to v{{version}}"
pro-release-commit-message = "Start next development iteration v{{version}}"
pre-release-replacements   = [
    { file = "README.md", search = "structopt-toml = \"[a-z0-9\\.-]+\"", replace = "structopt-toml = \"{{version}}\"" },
    { file = "Cargo.toml", search = "structopt-toml-derive = { version = \"[a-z0-9\\.-]+\"", replace = "structopt-toml-derive = { version = \"{{version}}\"" }
]
tag-message                = "Bump version to {{version}}"
tag-prefix                 = "v"
