[package]
name = "structopt-toml-derive"
version = "0.1.0"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/structopt"
keywords = ["cli", "structopt", "clap", "derive"]
categories = ["command-line-interface"]
license = "MIT"
description = "A derive crate of structopt-toml"

[lib]
proc-macro = true

[dependencies]
syn   = "0.12.14"
quote = "0.4.2"
