[package]
name = "structopt-toml-derive"
version = "0.4.2"
authors = ["dalance@gmail.com"]
repository = "https://github.com/dalance/structopt-toml"
keywords = ["cli", "structopt", "clap", "derive"]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
description = "A derive crate of structopt-toml"
edition = "2018"

[package.metadata.release]
disable-tag = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.10"
syn   = "1.0.18"
quote = "1.0.3"
